# mam

./: .dockerignore  .env .exemple  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
appointments/: models.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
core/: settings.py  urls.py
professionals/: admin.py  models.py  serializers.py  urls.py  views.py
professionals/migrations/: 0001_initial.py
professionals/tests/: test_api.py
