[tool.poetry]
name = "mam"
version = "0.1.0"
description = "API RESTful de Gerenciamento de Consultas Médicas"
authors = ["jaqueline <jaquelinesa.82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
